--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "autoload": {
-        "psr-4": {"": "src/"}
+        "psr-4": {"App\\": "src/"}
     },
     "require": {
         "symfony/var-dumper": "^4.4"
